--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-sticky": "^6.0.3",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
@@ -18,6 +19,7 @@
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-sticky": "^6.0.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
