--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/aws-lambda": "^8.10.46",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@types/node": "^12.12.29",
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-sticky": "^6.0.3",
+    "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
+    "pure-react-carousel": "^1.25.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
