--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-sticky": "^6.0.3",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "pure-react-carousel": "^1.25.2",
@@ -62,7 +63,7 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/aws-lambda": "^8.10.15",
     "babel-loader": "^8.0.4",
-    "http-proxy-middleware": "^0.19.0",
+    "http-proxy-middleware": "^0.19.1",
     "netlify-lambda": "^1.1.0",
     "npm-run-all": "^4.1.5"
   }
