--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^1.19.1",
     "pure-react-carousel": "^1.25.2",
     "react": "^16.12.0",
+    "react-content-loader": "^5.0.4",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
