--- a/package.json
+++ b/package.json
@@ -3,28 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/aws-lambda": "^8.10.46",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.12.29",
-    "@types/react": "^16.9.21",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/react-sticky": "^6.0.3",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
-    "pure-react-carousel": "^1.25.2",
-    "react": "^16.12.0",
-    "react-content-loader": "^5.0.4",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.9.0",
+    "pure-react-carousel": "^1.27.6",
+    "react": "^16.14.0",
+    "react-content-loader": "^5.1.4",
+    "react-dom": "^16.14.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.1",
     "react-sticky": "^6.0.3",
     "typescript": "~3.7.2"
   },
@@ -60,10 +49,20 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-object-assign": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/aws-lambda": "^8.10.15",
-    "http-proxy-middleware": "^0.19.1",
+    "@babel/plugin-transform-object-assign": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.7",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/aws-lambda": "^8.10.64",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.19.8",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-sticky": "^6.0.3",
+    "http-proxy-middleware": "^0.19.2",
     "netlify-lambda": "^1.1.0",
     "npm-run-all": "^4.1.5"
   }
